--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-template-columns: 2fr 6fr;
+}
+.App aside{
+  border: 1px solid gray;
+}
+.App main{
+  border: 1px solid gray;
 }
 
 .App-logo {
